--- a/Droid/huang.Droid.csproj
+++ b/Droid/huang.Droid.csproj
@@ -55,6 +55,7 @@
     <Compile Include="MainFlow\MasterActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Webflow\MyWebActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -74,6 +75,10 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\masterView.axml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="..\..\Users\cal\AndroidStudioProjects\MyApplication\app\src\main\res\layout\mywebview.xml">
+      <Link>Resources\layout\mywebview.xml</Link>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
